Change 'in your favour' to 'in your debt'.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <h1><a href="/">GoodFirstPatch.com</a></h1>
 
-      <p>We want to make contributing to Open Source as easy as possible, if you could take a few minutes to answer these questions we will be forever in your favour. If you want to discuss the project then join us <a href="https://github.com/daleharvey/goodfirstpatch/issues">on Github</a> or <a href="https://twitter.com/goodfirstpatch">on Twitter</a></p>
+      <p>We want to make contributing to Open Source as easy as possible, if you could take a few minutes to answer these questions we will be forever in your debt. If you want to discuss the project then join us <a href="https://github.com/daleharvey/goodfirstpatch/issues">on Github</a> or <a href="https://twitter.com/goodfirstpatch">on Twitter</a></p>
 
     </div></header>
 
